# ControlFlow

./: .dockerignore  .env.example  .gitignore  LICENSE  MAVSDK  README.md  mav.parm  pyproject.toml  requirements.txt  start_mavsdk_server_minimal.bat  start_mavsdk_servers.bat
config/: default.yaml  default2.yaml  docs_urls.txt  lattice_production.yaml  minimal.yaml  single_drone.yaml
docker/: Dockerfile.middleware  middleware.env.example
misc/: setup.txt
scripts/: emergency_land.py  health_check.py  setup_lattice_sdk.py  setup_mavsdk_server.py  simple_mavlink_simulator.py  start_px4_sitl_swarm.py  start_sitl_swarm.py  test_connection.py  test_dropping_task.py  test_lattice_integration.py  test_mapping_task.py  test_relay_task.py  test_tasks.py  verify_sdk.py
src/lattice_drone_control/: __init__.py  main.py
src/lattice_drone_control/connectors/: __init__.py  lattice.py  mavsdk.py
src/lattice_drone_control/core/: __init__.py  entity_manager.py  middleware.py  state_manager.py  task_manager.py
src/lattice_drone_control/models/: __init__.py  config.py  drone.py
src/lattice_drone_control/tasks/: __init__.py  base.py  dropping.py  mapping.py  relay.py
src/lattice_drone_control/utils/: __init__.py  logging.py  metrics.py
